[project]
name = "porkbun-ical"
version = "0.1.0"
description = "iCalendar for Porkbun domain renewal/expiries"
authors = [{ name = "Chris Tippett", email = "git@christippett.dev" }]
license = {file = "LICENSE"}
dependencies = [
  "icalendar>=5.0.13",
  "flask>=3.0.3",
  "requests>=2.32.3",
  "environs>=11.0.0",
  "gunicorn>=22.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.urls]
Repository = "https://github.com/christippett/porkbun-ical"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.rye.scripts]
dev = { cmd = "flask --app ./src/main.py run" }
build = { cmd = "podman build -t porkbun-ical ." }


[tool.pyright]
venvPath = "."
venv = ".venv"
